objects/Account.object
<CustomObject>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE</label>
        <referenceTo>AE__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APOAccountId__c</fullName>
        <label>APOAccountId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountOwner__c</fullName>
        <label>APOAccountOwner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOContractId__c</fullName>
        <label>APOContractId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration__c</fullName>
        <label>Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreateWSProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateWSProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Source__c</fullName>
        <label>Created Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Total__c</fullName>
        <label>Subscription Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>$Label.CopadoDomain &amp; &quot;/lightning/r/Account/&quot; &amp;  APOAccountId__c &amp; &quot;/view&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AE__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Created_Source__c</columns>
        <columns>URL__c</columns>
        <columns>APOAccountId__c</columns>
        <columns>APOAccountOwner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>